Apply five review improvements across student/registration modules